--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
+    "formidable": "^3.5.2",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.447.0",
     "mssql": "^11.0.1",
     "next": "14.2.14",
+    "next-connect": "^1.0.0",
     "next-themes": "^0.3.0",
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.2",
@@ -48,6 +51,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
+    "@types/formidable": "^3.4.5",
     "@types/mssql": "^9.1.5",
     "@types/node": "^20",
     "@types/react": "^18",
