--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "file-saver": "^2.0.5",
     "formidable": "^3.5.2",
     "fs": "^0.0.1-security",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.447.0",
     "mssql": "^11.0.1",
     "next": "14.2.14",
