--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
+    "react-select": "^5.10.0",
     "react-spinners": "^0.14.1",
     "recharts": "^2.13.0",
     "sonner": "^1.5.0",
