--- a/.envsample
+++ b/.envsample
@@ -2,4 +2,5 @@ DB_USER=################
 DB_PASSWORD=##########
 DB_SERVER=################
 DB_DATABASE=###########
+DB_DATABASE2=##########
 DB_PORT=#######
