--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.9",
+    "chart": "^0.1.2",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -40,6 +42,7 @@
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.2",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
