--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prod": "next build && next start"
+    "prod": "next build && next start -p 3020"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.2",
