--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-saver": "^2.0.5",
     "formidable": "^3.5.2",
     "fs": "^0.0.1-security",
+    "ioredis": "^5.7.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.447.0",
